# theme-explorer

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: 2025-06-09-data-analysis_and_augmentation.ipynb  2025-06-09-data-analysis_and_augmentation.py
src/theme_explorer/llm/: llm_synthetic.py  prompt_synthetic.py  synthetic_response.py
src/theme_explorer/utils/: text_cleaning.py
